//
// AUTHORITY SOURCE
//

model AuthoritySource {
  id   String @id @default(uuid())
  name String
  type SourceType

  createdAt DateTime @default(now())

  investigationMedia InvestigationMedia[]
  verifiedMedia      VerifiedMedia[]
  verifiedLinkMedia  VerifiedLink[]
}
