@startuml
!theme plain
hide circle
skinparam linetype ortho
skinparam entityBackgroundColor #FFFFFF
skinparam entityBorderColor #000000
skinparam entityFontSize 11
skinparam stereotypeFontSize 9
skinparam ranksep 50
skinparam nodesep 40

' ==========================================
' LEGEND
' ==========================================
legend right
  **Legend**
  ==
  <<PK>> : Primary Key
  <<FK>> : Foreign Key
  <<Unique>> : Unique
  <<NN>> : NOT NULL
  <color:#0066CC>field</color> : indexed
endlegend

' ==========================================
' TABLE ACTORS (users) - Central Table
' ==========================================
entity "actors" as actors {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>name</color> : string <<NN>>
  <color:#0066CC>email</color> : string <<Unique>> <<NN>>
  <color:#0066CC>role</color> : Role <<NN>>
  status : AccountStatus <<NN>>
  citizenType : CitizenType <<NN>>
  engagementScore : int <<NN>>
  lastInboxRead : DateTime <<NN>>
  statusReason : StatusReason
  statusReasonDetails : string
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE REPORTS
' ==========================================
entity "reports" as reports {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>citizenId</color> : string <<FK>> <<NN>>
  <color:#0066CC>status</color> : ReportStatus <<NN>>
  theme : string <<NN>>
  title : string
  content : string
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE INVESTIGATIONS (analyses)
' ==========================================
entity "investigations" as investigations {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>reportId</color> : string <<FK,Unique>> <<NN>>
  <color:#0066CC>journalistId</color> : string <<FK>> <<NN>>
  mediaCategory : MediaCategory
  <color:#0066CC>draftVerdict</color> : Verdict <<NN>>
  investigationNotes : string <<NN>>
  attemptCount : int <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE EVIDENCE (watcher_evidence)
' ==========================================
entity "evidence" as evidence {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>investigationId</color> : string <<FK>> <<NN>>
  <color:#0066CC>watcherId</color> : string <<FK>> <<NN>>
  content : string <<NN>>
  title : string <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE PUBLICATIONS
' ==========================================
entity "publications" as publications {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>investigationId</color> : string <<FK,Unique>> <<NN>>
  <color:#0066CC>approvedById</color> : string <<FK>> <<NN>>
  <color:#0066CC>finalVerdict</color> : Verdict <<NN>>
  publishedAt : DateTime <<NN>>
  isCorrection : boolean <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE WATCHER_APPLICATIONS
' ==========================================
entity "watcher_applications" as watcher_applications {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>applicantId</color> : string <<FK,Unique>> <<NN>>
  <color:#0066CC>status</color> : WatcherApplicationStatus <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE INBOX_SUBJECTS
' ==========================================
entity "inbox_subjects" as inbox_subjects {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  theme : string <<NN>>
  description : string
  <color:#0066CC>createdById</color> : string <<FK>> <<NN>>
  status : InboxSubjectStatus <<NN>>
  origin : InboxSubjectOrigin <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE NOTIFICATIONS
' ==========================================
entity "notifications" as notifications {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>actorId</color> : string <<FK>> <<NN>>
  type : NotificationType <<NN>>
  theme : string <<NN>>
  message : string <<NN>>
  isActive : boolean <<NN>>
  publicationId : string <<FK>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE AUTHORITY_SOURCES
' ==========================================
entity "authority_sources" as authority_sources {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  name : string <<NN>>
  type : SourceType <<NN>>
  createdAt : DateTime <<NN>>
}

' ==========================================
' TABLE CORRECTIONS
' ==========================================
entity "corrections" as corrections {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>notificationId</color> : string <<FK,Unique>> <<NN>>
  <color:#0066CC>publicationId</color> : string <<FK>> <<NN>>
  <color:#0066CC>correctedById</color> : string <<FK>> <<NN>>
  title : string <<NN>>
  content : string <<NN>>
  createdAt : DateTime <<NN>>
  updatedAt : DateTime <<NN>>
}

' ==========================================
' TABLE WORKFLOW_AUDITS
' ==========================================
entity "workflow_audits" as workflow_audits {
  * <color:#0066CC>id</color> : string <<PK>>
  --
  <color:#0066CC>investigationId</color> : string <<FK>> <<NN>>
  <color:#0066CC>actorId</color> : string <<FK>> <<NN>>
  previousStatus : ReportStatus
  newStatus : ReportStatus <<NN>>
  comment : string
  createdAt : DateTime <<NN>>
}

' ==========================================
' RELATIONS - Organisation par flux
' ==========================================

' Main flow: report -> investigation -> publication
actors |o--o{ reports : "citizen submits"
reports ||--|| investigations : "becomes"
investigations ||--|| publications : "produces"

' Secondary actors
actors |o--o{ investigations : "journalist investigates"
actors |o--o{ publications : "director approves"

' Evidence and sources
investigations ||--o{ evidence : "contains"
actors |o--o{ evidence : "watcher submits"
authority_sources |o--o{ investigations : "verifies"
authority_sources |o--o{ publications : "cites"

' Tracking and corrections
investigations |o--o{ workflow_audits : "tracked by"
workflow_audits ||--|| actors : "performed by"
publications |o--o{ corrections : "has"
corrections ||--|| publications : "corrects"
actors |o--o{ corrections : "created by"

' Notifications and corrections
publications ||--o{ notifications : "generates"
notifications ||--|| actors : "sent to"
notifications ||--|| publications : "about"
notifications ||--|| corrections : "contains"
corrections ||--|| notifications : "notified via"

' Watcher and subject management
actors |o--o{ watcher_applications : "citizen applies"
watcher_applications ||--|| actors : "promoted to watcher"
actors |o--o{ inbox_subjects : "director creates"
inbox_subjects ||--|| actors : "created by"

@enduml